[project]
name = "fastflow"
version = "0.1.5"
description = "CLI for syncing large binary files without Git/Git LFS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "aiosqlite>=0.20.0",
    "huggingface_hub>=0.24.0",
]

[project.scripts]
ff = "fastflow.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
